objects/ProspectReassignment__mdt.object
<CustomObject>
    <fields>
        <fullName>Approval_Error_Link__c</fullName>
        <label>Approval Error Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Report_Link__c</fullName>
        <label>Error Report Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassignment_Types__c</fullName>
        <label>Reassignment Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Access_Title__c</fullName>
        <label>User Access Title</label>
        <type>TextArea</type>
    </fields>
    <label>ProspectReassignment</label>
    <pluralLabel>ProspectReassignments</pluralLabel>
</CustomObject>